I'm tring to follow Semantic Versioning 2.0.0
http://semver.org/

=V0.0.1=
2015-03-31
* added nicknames posted to bulletin on server
** needed since peerjs doesn't support similar functionality
** also added a password to protect a user's nickname
** password is generated internally by javascript

2015-02-28
* added "saved" section with server saved games

2015-02-27
* added "Saved" section with locally saved games

=V0.0.0=
2015-02-26
* when nickname is empty, the ID of the server is shown on the server's peer list instead of the ID of the connector peer
* showing IDs even if nick is given
* make table instead of li
* Connect -> "+", disconnect -> "x", Me -> glyph
* removed delete peer since the refresh button autocleans the list
* no more prompt for nickname
* connected peers are in bold
* now i think this is ready to roll to the store

2015-02-25
* added peer discovery to server and clients
* added nickname + can update nicknames
* removed main menu
* simplified "Connect" tab

2015-02-24
* re-tested on tablet
** annoying when peer has bad connection... should show pending connection state instead of jumping to menu
** also annoying to have to copy paste id of peer using another tools such as irc or gmail... should have server automatically give all peer ids
** will not release
* added published material on google play (screenshots)
** but didn't release APK yet

2015-02-23
* added some more bootstrap classes to the admin controls
* can now reconnect to signaling server
* can now connect/disconnect/delete peers
* ready to release
* connect tab disabled/enabled buttons to have different colors
* connect tab: disable connect button if supplied id is empty

2015-02-21
* building app with crosswalk https://crosswalk-project.org

2015-02-20
* UI: broadcasting icon, admin icon, connected icon, disconnected icon
* UI: copy to clipboard, Connect tab simplified
* DEL buttons
* Assign admin 1 + Assign admin 2