@@ -2,6 +2,9 @@ I'm tring to follow Semantic Versioning 2.0.0
 http://semver.org/
 
 =V0.0.1=
+2015-04-01
+* added email to protect a nickname... have yet to test
+
 2015-03-31
 * added nicknames posted to bulletin on server
 ** needed since peerjs doesn't support similar functionality
